Updated project settings

--- a/ProjectSettings/Packages/com.viroo/Settings.json
+++ b/ProjectSettings/Packages/com.viroo/Settings.json
@@ -9,7 +9,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "applicationIdentifier",
-                "value": "{\"m_Value\":\"Viroo Studio Exercise Builder Template\"}"
+                "value": "{\"m_Value\":\"Viroo Training Module Demo\"}"
             },
             {
                 "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
